force-app/main/default/objects/noduplicates__Schedule__c/noduplicates__Schedule__c.object-meta.xml
<CustomObject>
    <label>Schedule</label>
    <nameField>
        <displayFormat>S-{0000000}</displayFormat>
        <label>Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>