force-app/main/default/objects/noduplicates__Schedule__c/fields/noduplicates__Business_Emails__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Business_Emails__c</fullName>
    <label>Business Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>