force-app/main/default/objects/noduplicates__Schedule__c/fields/noduplicates__Cron_Expression__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Cron_Expression__c</fullName>
    <label>Cron Expression</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>