force-app/main/default/objects/noduplicates__Schedule__c/fields/noduplicates__Cron_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Cron_Job_Id__c</fullName>
    <label>Cron Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>