force-app/main/default/objects/noduplicates__Schedule__c/fields/noduplicates__Day2__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Day2__c</fullName>
    <label>Day</label>
    <length>255</length>
    <type>Text</type>
</CustomField>