force-app/main/default/objects/noduplicates__Schedule__c/fields/noduplicates__Email_When_Job_Completes__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Email_When_Job_Completes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email When Duplicates Found</label>
    <type>Checkbox</type>
</CustomField>