force-app/main/default/objects/noduplicates__Schedule__c/fields/noduplicates__End_Date__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>