force-app/main/default/objects/noduplicates__Schedule__c/fields/noduplicates__Friday__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Friday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Friday</label>
    <type>Checkbox</type>
</CustomField>