force-app/main/default/objects/noduplicates__Schedule__c/fields/noduplicates__Is_Lightning_UI__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Is_Lightning_UI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Lightning UI</label>
    <type>Checkbox</type>
</CustomField>