force-app/main/default/objects/noduplicates__Schedule__c/fields/noduplicates__Org_Wide_Address__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Org_Wide_Address__c</fullName>
    <label>Org Wide Address</label>
    <length>18</length>
    <type>Text</type>
</CustomField>