force-app/main/default/objects/noduplicates__Schedule__c/fields/noduplicates__Perform_Auto_merge__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Perform_Auto_merge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Perform Auto-Merge</label>
    <type>Checkbox</type>
</CustomField>