force-app/main/default/objects/noduplicates__Schedule__c/fields/noduplicates__Preferred_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Preferred_Start_Time__c</fullName>
    <label>Preferred Start Time</label>
    <type>Time</type>
</CustomField>