force-app/main/default/objects/noduplicates__Schedule__c/fields/noduplicates__Saturday__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Saturday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saturday</label>
    <type>Checkbox</type>
</CustomField>