force-app/main/default/objects/noduplicates__Schedule__c/fields/noduplicates__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>