force-app/main/default/objects/noduplicates__Schedule__c/fields/noduplicates__Wednesday__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Wednesday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wednesday</label>
    <type>Checkbox</type>
</CustomField>