force-app/main/default/objects/noduplicates__Schedule__c/fields/noduplicates__Weekday2__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Weekday2__c</fullName>
    <label>Weekday</label>
    <length>255</length>
    <type>Text</type>
</CustomField>